--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -1,7 +1,7 @@
 
 <nav>
   <div class="nav-wrapper">
-  <a href="#" class="brand-logo">The Wilders 3</a>
+  <a href="#" class="brand-logo"><h1>The Wilders 3</h1></a>
     <ul id="nav-mobile" class="right hide-on-med-and-down" ng-repeat="link in $ctrl.links">
       <li><a ui-sref="{{link}}"
           ui-sref-active="active">{{link}}</a></li>
