--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,11 @@ html, body {
 header {
   padding: 0;
 }
+h1 {
+  margin-left: 1em;
+  margin-top: 0.5em;
+  font-size: 1em;
+  }
+#nav-mobile li a {
+  text-transform: capitalize;
+}
