--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -1,1 +1,8 @@
-<div>{{$ctrl.footer}}</div>
+<div class="page-footer">
+    <div class="footer-copyright">
+        <div class="container">
+            © 2017 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">Ici</a>
+        </div>
+    </div>
+</div>
