--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -1,1 +1,3 @@
-<div>{{$ctrl.test}}</div>
+<img ng-src="{{$ctrl.getArtists.images[1].resource_url}}">
+<div>{{$ctrl.getArtists.name}}</div>
+<div>{{$ctrl.getArtists.label}}</div>
