--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -1,4 +1,4 @@
-<div class="page-footer">
+<div class="page-footer teal lighten-1">
     <div class="footer-copyright">
         <div class="container">
             © 2017 Copyright Text
