--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -1,5 +1,5 @@
 
-<nav>
+<nav class="teal lighten-1">
   <div class="nav-wrapper">
   <a href="#!" class="brand-logo"><h1>The Wilders 3</h1></a>
   <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
