--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -1,9 +1,34 @@
-<div class="row">
-    <div class="col offset-s1"></div>
-    <div ng-repeat="artist in $ctrl.artists">
-        <div class="col s2 purCent">
-            <img class="responsive-img" ng-src="{{artist.images[1].resource_url}}">
-            <div>{{artist.name}}</div>
-        </div>
+<div class="row inLine">
+    <div class="test" ng-repeat="artist in $ctrl.artists">
+        
+            <div class="purCent">
+                <img class="responsive-img" ng-src="{{ artist.images[0].uri }}" alt="{{ artist.id }}">
+            </div>
+
+            <h3>{{ artist.name }}</h3>
+            <h5>Derniers Morceaux</h5>
+            <ul ng-repeat="release in $ctrl.getArtistReleases(artist.id).releases">
+                <li>
+                    <a ui-sref="release({ id : release.id })"> {{ release.title }} </a>
+                    <small> {{ release.label || "no label" }}</small>
+                </li>
+         </ul>
+    </div>
+</div>
+<div class="row inLine">
+    <div class="test" ng-repeat="artist in $ctrl.artists">
+        
+            <div class="purCent">
+                <img class="responsive-img" ng-src="{{ artist.images[0].uri }}" alt="{{ artist.id }}">
+            </div>
+
+            <h3>{{ artist.name }}</h3>
+            <h5>Derniers Morceaux</h5>
+            <ul ng-repeat="release in $ctrl.getArtistReleases(artist.id).releases">
+                <li>
+                    <a ui-sref="release({ id : release.id })"> {{ release.title }} </a>
+                    <small> {{ release.label || "no label" }}</small>
+                </li>
+         </ul>
     </div>
 </div>
