--- a/css/style.css
+++ b/css/style.css
@@ -21,16 +21,25 @@ h1 {
 #nav-mobile li a {
   text-transform: capitalize;
 }
-ul li a:hover {
+.nav-wrapper ul li a:hover {
   background-color: teal !important;
 }
 
 /* CONTENT */
 .purCent {
-  width: 20vw;
-  height: 20vw;
+  margin: auto;
+  width: 100%;
+  height: 50%;
   overflow: hidden;
 }
+
+.test {
+  width: 100%;
+}
+
+.inLine {
+  display: flex;
+  }
 
 /* FOOTER */
 
