--- a/css/style.css
+++ b/css/style.css
@@ -29,14 +29,16 @@ h1 {
 .purCent {
   margin: auto;
   width: 100%;
-  height: 50%;
+  height: 25%;
   overflow: hidden;
 }
 
-.test {
-  width: 100%;
+.contain-me {
+  width: 20%;
 }
-
+img.responsive-img, video.responsive-video {
+  max-width: none;
+}
 .inLine {
   display: flex;
   }
