le commit du matin

--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,32 @@ h1 {
 .contain-me {
   width: 20%;
 }
+
+.contain-page {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.contain-content {
+  flex-direction: column
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
 img.responsive-img, video.responsive-video {
   max-width: none;
 }
 .inLine {
   display: flex;
   }
+
+.img-artiste {
+  margin: auto;
+  width: 20%;
+  height: auto;
+}
 
 /* FOOTER */
 
