--- a/app/components/artist/artist.html
+++ b/app/components/artist/artist.html
@@ -1,9 +1,8 @@
-<div class="row inLine">
-    <div class="contain-me">
-        <h2>{{$currentArtist.name}}</h2>
-            <div class="purCent">
-                <img class="responsive-img" ng-src="{{ $currentArtist.images[0].resource_url }}">
-            </div>
+<div class="contain-page">
+    <img class="responsive-img img-artiste" ng-src="{{ $ctrl.currentArtist.images[0].resource_url }}">
+    <div class="content-page">
+        <h2>{{$ctrl.currentArtist.name}}</h2>
+        <p>{{$ctrl.currentArtist.profile}}</p>
         <h5>Derniers Morceaux</h5>
     </div>
 </div>
