--- a/css/style.css
+++ b/css/style.css
@@ -44,22 +44,67 @@ h1 {
 }
 
 .contain-content {
-  flex-direction: column
+  margin: 0 auto;
+  width: 94%;
+  height: 84%;
+}
+
+p, h2 {
+  width:80%;
+  margin: 0;
+}
+
+.column {
+  width: 49%;
+  float: left;
+  border-radius: 5px;
+}
+
+.contain-img {
+  float:left;
+  width: 20vw;
+  margin: auto;
+  max-height: 90%;
+  overflow: hidden;
+}
+.contain-txt {
+  float:right;
+  width: 75%;
+  margin: auto;
+  max-height: 90%;
+  overflow: scroll;
+}
+
+.row-artist {
   display: flex;
+  height: 50%;
   width: 100%;
-  height: 100%;
+}
+
+.list {
+  max-height: 80%;
+  width: 95%;
+  padding: 10px;
+  overflow: scroll;
+  border: 3px solid black;
+  border-radius: 5px;
+  transition : all 0.5s;
+}
+
+.list:hover {
+  box-shadow : 0 0 10px black;
 }
 
 img.responsive-img, video.responsive-video {
   max-width: none;
 }
+
 .inLine {
   display: flex;
   }
 
 .img-artiste {
-  margin: auto;
-  width: 20%;
+  width: 100%;
   height: auto;
 }
 
