--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -1,15 +1,8 @@
 <nav class="teal lighten-1">
   <div class="nav-wrapper">
     <a href="#!" class="brand-logo">
+      <i class="large material-icons"> assessment</i>
       <h1>The Wilders 3</h1>
     </a>
-    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down" ng-repeat="link in $ctrl.links">
-      <li><a ui-sref="{{link}}" ui-sref-active="active">{{link}}</a></li>
-    </ul>
-    <ul class="side-nav" id="mobile-demo">
-      <li><a ui-sref="{{link}}" ui-sref-active="active">{{link}}</a></li>
-    </ul>
   </div>
 </nav>
-<div>{{$ctrl.header}}</div>
