--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,12 @@ h1 {
   background-color: teal !important;
 }
 
+nav i, nav [class^="mdi-"], nav [class*="mdi-"], nav i.material-icons {
+  font-size: 40px;
+  padding-left: 10px; 
+  margin-right: 0 !important; 
+}
+
 /* CONTENT */
 .purCent {
   margin: auto;
@@ -56,6 +62,11 @@ p, h2 {
 
 .column {
   width: 49%;
+  float: left;
+  border-radius: 5px;
+}
+.column-rel {
+  width: 100%;
   float: left;
   border-radius: 5px;
 }
@@ -118,4 +129,8 @@ footer {
 }
 .page-footer {
   padding-top: 0;
+}
+
+.center {
+  text-align: center;
 }
