--- a/app/components/footer/footer.html
+++ b/app/components/footer/footer.html
@@ -1,8 +1,7 @@
 <div class="page-footer teal lighten-1">
     <div class="footer-copyright">
         <div class="container">
-            © 2017 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">Ici</a>
+            <div class="center">© 2017 Copyright Text</div>
         </div>
     </div>
 </div>
