--- a/css/style.css
+++ b/css/style.css
@@ -1,121 +1,151 @@
 html, body {
     width: 100%;
     height: 100%;
-
     margin: 0;
     padding: 0;
-/**/
-    /*overflow: hidden;*/
 }
+
 
 /* HEADER */
 
 header {
-  padding: 0;
-}
-h1 {
-  margin-left: 1em;
-  margin-top: 0.5em;
-  font-size: 1em;
-  }
-#nav-mobile li a {
-  text-transform: capitalize;
-}
-.nav-wrapper ul li a:hover {
-  background-color: teal !important;
+    padding: 0;
 }
 
+h1 {
+    margin-left: 1em;
+    margin-top: 0.5em;
+    font-size: 1em;
+}
+
+#nav-mobile li a {
+    text-transform: capitalize;
+}
+
+.nav-wrapper ul li a:hover {
+    background-color: teal !important;
+}
+
+
 /* CONTENT */
+
 .purCent {
-  margin: auto;
-  width: 100%;
-  height: 25%;
-  overflow: hidden;
+    margin: auto;
+    width: 100%;
+    height: 25%;
+    overflow: hidden;
 }
 
 .contain-me {
-  width: 20%;
+    width: 20%;
 }
 
 .contain-page {
-  display: flex;
-  width: 100%;
-  height: 100%;
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 .contain-content {
-  margin: 0 auto;
-  width: 94%;
-  height: 84%;
+    margin: 0 auto;
+    width: 94%;
+    height: 84%;
 }
 
 p, h2 {
-  width:80%;
-  margin: 0;
+    width: 80%;
+    margin: 0;
 }
 
 .column {
-  width: 49%;
-  float: left;
-  border-radius: 5px;
+    width: 49%;
+    float: left;
+    border-radius: 5px;
 }
 
 .contain-img {
-  float:left;
-  width: 20vw;
-  margin: auto;
-  max-height: 90%;
-  overflow: hidden;
+    float: left;
+    width: 20vw;
+    margin: auto;
+    max-height: 90%;
+    overflow: hidden;
 }
+
 .contain-txt {
-  float:right;
-  width: 75%;
-  margin: auto;
-  max-height: 90%;
-  overflow: scroll;
+    float: right;
+    width: 75%;
+    margin: auto;
+    max-height: 90%;
+    overflow: scroll;
 }
 
 .row-artist {
-  display: flex;
-  height: 50%;
-  width: 100%;
+    display: flex;
+    height: 50%;
+    width: 100%;
 }
 
 .list {
-  max-height: 80%;
-  width: 95%;
-  padding: 10px;
-  overflow: scroll;
-  border: 3px solid black;
-  border-radius: 5px;
-  transition : all 0.5s;
+    max-height: 80%;
+    width: 95%;
+    padding: 10px;
+    overflow: scroll;
+    border: 3px solid black;
+    border-radius: 5px;
+    transition: all 0.5s;
 }
 
 .list:hover {
-  box-shadow : 0 0 10px black;
+    box-shadow: 0 0 10px black;
 }
 
 img.responsive-img, video.responsive-video {
-  max-width: none;
+    max-width: none;
 }
 
 .inLine {
-  display: flex;
-  }
+    display: flex;
+}
 
 .img-artiste {
-  width: 100%;
-  height: auto;
+    width: 100%;
+    height: auto;
 }
+
+.caption {
+    position: absolute;
+    top: 10em;
+    width: 25%;
+}
+
+.caption p {
+    color: #ffffff;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 1.2em;
+    background: rgba(38, 166, 154, 0.6);
+}
+
+.info {
+    position: absolute;
+    top: 4em;
+    height: 29%;
+    width: 20%;
+    background: rgba(38, 166, 154, 0.8);
+    color: #ffffff;
+}
+
 
 /* FOOTER */
 
 footer {
-  position:fixed;
-  width: 100%;
-  padding: 0;
-  bottom: 0;
+    position: fixed;
+    width: 100%;
+    padding: 0;
+    bottom: 0;
 }
+
 .page-footer {
-  padding-top: 0;
+    padding-top: 0;
 }
